# gis-technical-challenge

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_xarray_read_times.ipynb
